--- a/appconfig.env
+++ b/appconfig.env
@@ -12,4 +12,4 @@ DB_URL=mysql+pymysql://janabboud:99uoZ2CejfzC@92.205.7.84:3306/foodworld
 
 
 #OpenAi Api Key
-HF_TOKEN=
+HF_TOKEN=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
